--- a/Images/Styles/career.css
+++ b/Images/Styles/career.css
@@ -23,7 +23,7 @@
 body{
   height: 100vh; width: 100vw;
   position: relative;
-  background-image: url(career.jpg);
+  background-image: url(logo.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
