--- a/Images/Styles/home.css
+++ b/Images/Styles/home.css
@@ -25,7 +25,7 @@
 body{
   height: 100vh; width: 100vw;
   position: relative;
-  background-image: url(home.jpg);
+  background-image: url(logo.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
