--- a/Images/Styles/projects.css
+++ b/Images/Styles/projects.css
@@ -25,7 +25,7 @@
 body{
   height: 100vh; width: 100vw;
   position: relative;
-  background-image: url(project.jpg);
+  background-image: url(logo.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 100%;
